# Windrecorder

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  communication.json  config.json  dbManager.py  generate_offline_deps.bat  install_and_update.bat  install_offline.bat  install_update.bat  install_update_setting.bat  languages.json  lock_file_record  main.py  maintainManager.py  onboard_setting.py  onboarding.md  pyproject.toml  recordScreen.py  record_screen.py  requirements.txt  start_app.bat  start_record.bat  start_webui.bat  temp.ipynb  utils.py  webui.py
.streamlit/: config.toml
Windrecorder/: config.json  dbManager.py  maintainManager.py  recordScreen.py  requirements - withver.txt  requirements.txt  webui.py
__assets__/: CHANGELOG.md  Multilingual_Translation_Contribution_Guide.md  OCR_test_1080_words_en-US.txt  OCR_test_1080_words_ja.txt  OCR_test_1080_words_sc.txt  README-en.md  README-ja.md  README-sc.md  how_to_set_LLM_api_endpoint_en.md  how_to_set_LLM_api_endpoint_sc.md  third_party_ocr_engine_benchmark_reference.md  workflow-ru.psd
buildtools/: build_into_exe.bat
catch/: get_day_ocr_result_out.txt
chineseocr_lite_onnx/: model.py
config/: config_default.json  similar_CN_characters.txt  wordcloud_stopword.txt
config/src/: about_en.md  about_ja.md  about_sc.md  about_zh.md  config_default.json  how_it_work_sc.md  how_it_work_zh.md  languages.json  meta.json  onboarding_en.md  onboarding_ja.md  onboarding_sc.md  onboarding_zh.md  similar_CN_characters.txt  video_compress_preset.json  wordcloud_stopword.txt
extension/: how_to_contribute_third_party_ocr_support.md  place_or_dev_extension_here
extension/(discarded, remaking in progress) install_img_embedding_module/: meta.json
extension/LLM_search_and_summary/: _webui.py  (+3 more)
rewindWindows/: config.json  dbManager.py  maintainManager.py  recordScreen.py  webui.py
tests/: test_file_utils.py  test_oneday.py
ui/: components.py  oneday.py  search.py
userdata/: flag_mark_note.csv
windrecorder/: __init__.py  config.py  const.py  dbManager.py  db_manager.py  exceptions.py  file_utils.py  files.py  flag_mark_note.py  img_embed.py  img_embed_manager.py  llm.py  lock.py  logger.py  maintainManager.py  ocr_manager.py  oneday.py  record.py  record_wintitle.py  state.py  update_routine.py  upgrade_migration_routine.py  utils.py  win_ui.py  wordcloud.py
(+76 files in other folders)
