[tool.poetry]
name = "windrecorder"
version = "0.0.4b4"
description = "MacOS App Rewind's alternative on Windows platform, your personal memorize search engine. It can continuously recording your screen locally in small file size, and OCR the content so you can backtrack and query memory any time."
authors = ["yuka-friends"]
license = "GPL-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
jieba = "^0.42.1"
matplotlib = "^3.7.1"
numpy = "^1.24.2"
onnxruntime = "~1.15.1"
opencv_python = "~4.5.5.64"
pandas = "^2.0.3"
PyAutoGUI = "^0.9.54"
pyclipper = "~1.3.0.post4"
pyshortcuts = "^1.9.0"
pywin32 = "~306"
Send2Trash = "^1.8.2"
Shapely = "~2.0.1"
streamlit = "^1.28.2"
pillow = "^10.1.0"
wordcloud = "^1.9.2"
pystray = "^0.19.5"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
